--- a/webcomponent/select-webcomponent/demo/index.html
+++ b/webcomponent/select-webcomponent/demo/index.html
@@ -4,55 +4,55 @@
     <link rel="stylesheet" href="dist/css/style.css" />
   </head>
   <body>
-    <select is="s-select">
-      <option s-select-option-elm="#custom-option-1" value="item-1"
+    <select is="ck-select">
+      <option ck-select-option-elm="#custom-option-1" value="item-1"
         >Item #1</option
       >
-      <option s-select-option-elm="#custom-option-2" value="item-2"
+      <option ck-select-option-elm="#custom-option-2" value="item-2"
         >Item #2</option
       >
-      <option s-select-option-elm="#custom-option-3" value="item-3"
+      <option ck-select-option-elm="#custom-option-3" value="item-3"
         >Item #3</option
       >
     </select>
     <select
-      is="s-select"
+      is="ck-select"
       multiple
       placeholder="Choose some options..."
       color="secondary"
     >
-      <option s-select-option-elm="#custom-option-1" value="item-1"
+      <option ck-select-option-elm="#custom-option-1" value="item-1"
         >Item #1</option
       >
-      <option s-select-option-elm="#custom-option-2" value="item-2"
+      <option ck-select-option-elm="#custom-option-2" value="item-2"
         >Item #2</option
       >
-      <option s-select-option-elm="#custom-option-3" value="item-3"
+      <option ck-select-option-elm="#custom-option-3" value="item-3"
         >Item #3</option
       >
     </select>
-    <select is="s-select">
+    <select is="ck-select">
       <option value="value1">Hello</option>
       <option value="value2">World</option>
       <optgroup label="My Cool Group">
         <option value="value3">My Cool Option</option>
       </optgroup>
     </select>
-    <select is="s-select" color="success">
+    <select is="ck-select" color="success">
       <option value="value1">Hello</option>
       <option value="value2">World</option>
       <optgroup label="My Cool Group">
         <option value="value3">My Cool Option</option>
       </optgroup>
     </select>
-    <select is="s-select" color="info">
+    <select is="ck-select" color="info">
       <option value="value1">Hello</option>
       <option value="value2">World</option>
       <optgroup label="My Cool Group">
         <option value="value3">My Cool Option</option>
       </optgroup>
     </select>
-    <select is="s-select" multiple placeholder="Choose some options...">
+    <select is="ck-select" multiple placeholder="Choose some options...">
       <option value="value1">Hello</option>
       <option value="value2">World</option>
       <optgroup label="My Cool Group">
@@ -60,7 +60,7 @@
       </optgroup>
     </select>
     <select
-      is="s-select"
+      is="ck-select"
       multiple
       placeholder="Choose some options..."
       color="primary"
@@ -71,7 +71,7 @@
         <option value="value3">My Cool Option</option>
       </optgroup>
     </select>
-    <select is="s-select" disabled>
+    <select is="ck-select" disabled>
       <option value="value1">Hello</option>
       <option value="value2">World</option>
       <optgroup label="My Cool Group">
