--- a/util/sugar/demo/index.html
+++ b/util/sugar/demo/index.html
@@ -7,6 +7,8 @@
   <body>
 
 
+    <div id="yop">Hello World wufiuwe piqwuhefuohwif iuwqh efiouh qwieufh owiuef iuweh</div>
+
     <input type="text" name="coco" />
 
     <div class="coffeekraken-logo"></div>
