--- a/webcomponents/s-filtrable-input/index.html
+++ b/webcomponents/s-filtrable-input/index.html
@@ -1,1 +1,1 @@
-<input is="s-filtrable-input" type="text" items="[{coco:'yopyopyop'}]" />
+<input is="s-filtrable-input" id="main-filtrable-input" type="text" />
