--- a/webcomponents/s-filtrable-input/index.html
+++ b/webcomponents/s-filtrable-input/index.html
@@ -1,1 +1,7 @@
+<h1>Hello world</h1>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in tellus finibus, porta ante nec, auctor elit. Etiam sed egestas lacus, a hendrerit libero. Mauris ullamcorper bibendum neque, ac sollicitudin libero eleifend non. Ut rhoncus pharetra leo, quis ornare leo molestie pharetra. Maecenas vestibulum, risus a pulvinar iaculis, urna turpis euismod ex, vel rhoncus erat lectus eget quam. Morbi blandit elit sit amet lacus dapibus venenatis. Duis egestas nec risus ut scelerisque. Sed feugiat aliquet dui, quis tincidunt risus scelerisque ac. Vivamus sed porta est, nec auctor purus. Sed commodo congue egestas. Aenean congue ac augue vitae commodo. Ut in nunc ut erat sollicitudin rhoncus. Duis id felis condimentum, tristique est a, porta diam. Duis consectetur ipsum id massa vehicula, eget ultrices eros blandit.
+
+</p>
+
 <input is="s-filtrable-input" type="text" />
