--- a/packages/webcomponents/s-highlight-js/index.html
+++ b/packages/webcomponents/s-highlight-js/index.html
@@ -9,6 +9,14 @@
   <body>
     <script type="module" defer src="/src/js/index.ts"></script>
     wfewfjio wefj
-    <s-highlight-js> Hello world </s-highlight-js>
+    <s-highlight-js>
+      import __SClass from '@coffeekraken/s-class'; import __deepMerge from
+      '@coffeekraken/sugar/shared/object/deepMerge'; import __SInterface from
+      '@coffeekraken/s-interface'; import __mustache from 'mustache'; import
+      __stylesheetToString from '@coffeekraken/sugar/js/css/stylesheetToString';
+      export default SSVelteComponent;
+    </s-highlight-js>
+
+    <s-highlight-js> Coco </s-highlight-js>
   </body>
 </html>
