--- a/packages/features/s-form-validate-feature/index.html
+++ b/packages/features/s-form-validate-feature/index.html
@@ -15,7 +15,7 @@
         </script>
 
         <form action="/something">
-            <div alphanum s-form-validate>
+            <!-- <div alphanum s-form-validate>
                 <input class="s-input" type="text" name="input" />
             </div>
 
@@ -30,7 +30,12 @@
             </label>
 
             <label class="s-label" s-form-validate email>
-                <input class="s-input" type="email" name="input" />
+                <input class="s-input" type="text" name="input" />
+                Email
+            </label> -->
+
+            <label class="s-label" s-form-validate email wrap="false">
+                <input class="s-input" type="text" name="input" />
                 Email
             </label>
         </form>
