--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -58,6 +58,60 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---autocomplete"></i>
+            </span>
+            <br>
+            <span class='label'>autocomplete</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---brand-coffeekraken"></i>
+            </span>
+            <br>
+            <span class='label'>brand-coffeekraken</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---brand-lit"></i>
+            </span>
+            <br>
+            <span class='label'>brand-lit</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---code"></i>
+            </span>
+            <br>
+            <span class='label'>code</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---copy"></i>
+            </span>
+            <br>
+            <span class='label'>copy</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---datepicker"></i>
+            </span>
+            <br>
+            <span class='label'>datepicker</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---display-preview"></i>
             </span>
             <br>
@@ -188,6 +242,15 @@
             </span>
             <br>
             <span class='label'>lang-ts</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---range"></i>
+            </span>
+            <br>
+            <span class='label'>range</span>
         </div>
 
 
