--- a/packages/features/s-sugar-feature/index.html
+++ b/packages/features/s-sugar-feature/index.html
@@ -4,15 +4,20 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vue js component</title>
+        <link rel="stylesheet" type="text/css" href="src/css/index.css" />
+        <title>Range component</title>
     </head>
-    <body>
+    <body s-sugar>
         <script type="module">
-            import SConfigExplorer, { define } from './src/js/index.ts';
+            import { define } from './src/js/exports.ts';
 
             define();
         </script>
 
-        <s-config-explorer />
+        <style></style>
+
+        <div class="my-element"></div>
+
+        <p>Hello world</p>
     </body>
 </html>
