--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -85,6 +85,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---button"></i>
+            </span>
+            <br>
+            <span class='label'>button</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---code"></i>
             </span>
             <br>
