--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -58,10 +58,28 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---align"></i>
+            </span>
+            <br>
+            <span class='label'>align</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---autocomplete"></i>
             </span>
             <br>
             <span class='label'>autocomplete</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---avatar"></i>
+            </span>
+            <br>
+            <span class='label'>avatar</span>
         </div>
 
 
@@ -103,6 +121,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---colors"></i>
+            </span>
+            <br>
+            <span class='label'>colors</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---copy"></i>
             </span>
             <br>
@@ -125,6 +152,15 @@
             </span>
             <br>
             <span class='label'>display-preview</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---dropdown"></i>
+            </span>
+            <br>
+            <span class='label'>dropdown</span>
         </div>
 
 
@@ -337,10 +373,37 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---switch"></i>
+            </span>
+            <br>
+            <span class='label'>switch</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---theme"></i>
             </span>
             <br>
             <span class='label'>theme</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---tooltip"></i>
+            </span>
+            <br>
+            <span class='label'>tooltip</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---typography"></i>
+            </span>
+            <br>
+            <span class='label'>typography</span>
         </div>
 
 
