--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -166,6 +166,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---easing"></i>
+            </span>
+            <br>
+            <span class='label'>easing</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---file-css"></i>
             </span>
             <br>
@@ -215,6 +224,15 @@
             </span>
             <br>
             <span class='label'>file-ts</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---flex"></i>
+            </span>
+            <br>
+            <span class='label'>flex</span>
         </div>
 
 
@@ -310,6 +328,24 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---opensource"></i>
+            </span>
+            <br>
+            <span class='label'>opensource</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---radius"></i>
+            </span>
+            <br>
+            <span class='label'>radius</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---range"></i>
             </span>
             <br>
@@ -319,10 +355,37 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---ratio"></i>
+            </span>
+            <br>
+            <span class='label'>ratio</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---refresh"></i>
             </span>
             <br>
             <span class='label'>refresh</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---scale"></i>
+            </span>
+            <br>
+            <span class='label'>scale</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---space"></i>
+            </span>
+            <br>
+            <span class='label'>space</span>
         </div>
 
 
@@ -404,6 +467,15 @@
             </span>
             <br>
             <span class='label'>typography</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---visibility"></i>
+            </span>
+            <br>
+            <span class='label'>visibility</span>
         </div>
 
 
