--- a/packages/builders/s-markdown-builder/src/transformers/code/code.html
+++ b/packages/builders/s-markdown-builder/src/transformers/code/code.html
@@ -1,3 +1,5 @@
 <s-code-example>
-    <template lang="{{data.[1]}}">{{{data.[2]}}}</template>
+    <template lang="{{data.[1]}}">
+        {{{data.[2]}}}
+    </template>
 </s-code-example>
