--- a/packages/websites/coffeekraken-io/static/index.html
+++ b/packages/websites/coffeekraken-io/static/index.html
@@ -735,13 +735,13 @@
  </a>
  </li>
     <li>
- <a href="/@coffeekraken/s-refocus-feature/doc/readme" title="@coffeekraken/s-refocus-feature">
- s-refocus-feature
+ <a href="/@coffeekraken/s-request/doc/readme" title="@coffeekraken/s-request">
+ s-request
  </a>
  </li>
     <li>
- <a href="/@coffeekraken/s-request/doc/readme" title="@coffeekraken/s-request">
- s-request
+ <a href="/@coffeekraken/s-refocus-feature/doc/readme" title="@coffeekraken/s-refocus-feature">
+ s-refocus-feature
  </a>
  </li>
     <li>
@@ -1543,7 +1543,7 @@
 <p class="s-typo s-typo--lead s-mbe s-mbe--60">Everything you need like full <span class="s-tc s-tc--accent">UI components
  library</span>,<br />strong theming support as well as <span class="s-tc s-tc--complementary">full development
  stack</span> based<br />on <a href="https://vitejs.dev" class="s-tc s-tc--complementary" title="Vite js"
- target="_blank">Vite JS</a>. All of this with <span class="s-tc s-tc--accent">extrem customization</span>
+ target="_blank">Vite JS</a>. All of this with <span class="s-tc s-tc--accent">extreme customization</span>
  capabilities!</p>
 
 
@@ -2102,9 +2102,9 @@
  </a>
  </div>
  <div>
- <img class="__illustration s-when s-when--light" src="/dist/img/illustrations/toolkit.svg" alt="Sugar toolkit"
+ <img class="__illustration s-when s-when--light" src="/dist/img/illustrations/toolkit.png" alt="Sugar toolkit"
  title="Sugar toolkit" />
- <img class="__illustration s-when s-when--dark" src="/dist/img/illustrations/toolkit-dark.svg"
+ <img class="__illustration s-when s-when--dark" src="/dist/img/illustrations/toolkit-dark.png"
  alt="Sugar toolkit" title="Sugar toolkit" />
  </div>
  </div>
