--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -103,6 +103,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---brand-nextjs"></i>
+            </span>
+            <br>
+            <span class='label'>brand-nextjs</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---brand-opensource"></i>
+            </span>
+            <br>
+            <span class='label'>brand-opensource</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="-- ---build"></i>
+            </span>
+            <br>
+            <span class='label'>build</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---button"></i>
             </span>
             <br>
@@ -337,10 +364,10 @@
 
         <div class="preview">
             <span class="inner">
-                <i class="-- ---opensource"></i>
+                <i class="-- ---more"></i>
             </span>
             <br>
-            <span class='label'>opensource</span>
+            <span class='label'>more</span>
         </div>
 
 
