--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -355,6 +355,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="-- ---link-broken"></i>
+            </span>
+            <br>
+            <span class='label'>link-broken</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="-- ---loader"></i>
             </span>
             <br>
