--- a/packages/@websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
+++ b/packages/@websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.html
@@ -376,6 +376,14 @@
 
     <div class="preview">
       <span class="inner">
+        <i class="-- ---misc-bubbles"></i>
+      </span>
+      <br />
+      <span class="label">misc-bubbles</span>
+    </div>
+
+    <div class="preview">
+      <span class="inner">
         <i class="-- ---misc-build-solid"></i>
       </span>
       <br />
