--- a/packages/@websites/postcss-coffeekraken-io/static/index.html
+++ b/packages/@websites/postcss-coffeekraken-io/static/index.html
@@ -738,7 +738,7 @@ body {
 
  </div>
 
- <div class="_doc">
+ <div class="_doc" s-deps css="inputContainer,hide,depth,disabled,scale,transision,opacity,shape,list,grid,flex,gap,border,text,fit">
  <s-doc></s-doc>
  </div>
 
