--- a/packages/@websites/postcss-coffeekraken-io/static/index.html
+++ b/packages/@websites/postcss-coffeekraken-io/static/index.html
@@ -380,9 +380,9 @@
  </div>
 
 </section>
-<template s-lazy>
+<template s-lazy id="get-started">
 
- <section class="section" id="get-started">
+ <section class="section">
 
  <div class="s-container">
 
@@ -439,9 +439,9 @@
  </section>
 
 </template>
-<template s-lazy>
+<template s-lazy id="examples">
 
- <section class="section" id="examples">
+ <section class="section">
 
  <div class="s-container">
 
@@ -727,20 +727,18 @@
  </section>
 
 </template>
-<template s-lazy>
-
- <section class="section" id="documentation">
+<section class="section" id="documentation">
 
  <div class="s-container">
 
- <div class="_layout s-mbe:50">
+ <div class="_layout s-mbe s-mbe--50">
  
  <div>
- <i class="s-icon:documentation _icon-title"></i>
- <h2 class="s-typo:h2 s-mbe:30 _title">
+ <i class="s-icon s-icon--documentation _icon-title"></i>
+ <h2 class="s-typo s-typo--h2 s-mbe s-mbe--30 _title">
  Documentation
  </h2>
- <p class="s-typo:h4 s-mbe:30">
+ <p class="s-typo s-typo--h4 s-mbe s-mbe--30">
  Here all the available mixins, functions and configurations
  </p>
  </div>
@@ -753,9 +751,7 @@
 
  </div>
 
- </section>
-
-</template>
+</section>
  </main>
 
  <div class="tools s-until s-until--media s-until--mobile">
