--- a/packages/@app/sherlock/src/renderer/index.html
+++ b/packages/@app/sherlock/src/renderer/index.html
@@ -10,8 +10,10 @@
         /> -->
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self'; script-src 'self'; img-src *; style-src-elem *; font-src *;"
+            content="default-src 'self'; script-src 'self'; img-src *; style-src-elem *; font-src *; connect-src *;"
         />
+
+        <meta name="theme-color" content="#ff0000" />
 
         <script type="module" src="./src/js/index.ts" defer></script>
         <link href="./src/css/index.css" type="text/css" rel="stylesheet" />
