--- a/packages/@app/sherlock/src/renderer/index.html
+++ b/packages/@app/sherlock/src/renderer/index.html
@@ -10,7 +10,13 @@
         /> -->
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self'; script-src 'self'; img-src *; style-src-elem *; font-src *; connect-src *;"
+            content="default: *; default-src 'self';
+                    script-src 'self';
+                    style-src-elem * 'unsafe-inline';
+                    style-src 'unsafe-inline';
+                    img-src *;
+                    font-src *;
+                    connect-src *;"
         />
 
         <meta name="theme-color" content="#ff0000" />
