--- a/packages/@app/sherlock/src/renderer/index.html
+++ b/packages/@app/sherlock/src/renderer/index.html
@@ -14,7 +14,7 @@
                     script-src 'self';
                     style-src-elem * 'unsafe-inline';
                     style-src 'unsafe-inline';
-                    img-src *;
+                    img-src * data:;
                     font-src *;
                     connect-src *;"
         />
